k8s/v1.1.0/ale.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ale
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: agent
    module: agent
    service: ale
  name: ale-agent
  namespace: ale
spec:
  clusterIP: None
  ports:
  - appProtocol: http
    name: http
    port: 9800
    protocol: TCP
    targetPort: 9800
  - appProtocol: https
    name: https
    port: 9801
    protocol: TCP
    targetPort: 9801
  selector:
    app: agent
    module: agent
    service: ale
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: builder
    module: docker-daemon
    service: ale
  name: ale-build-daemon
  namespace: ale
spec:
  clusterIP: None
  ports:
  - port: 2376
    protocol: TCP
  selector:
    app: builder
    module: docker-daemon
    service: ale
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: controller
    module: controller
    service: ale
  name: ale-controller
  namespace: ale
spec:
  clusterIP: None
  ports:
  - port: 9009
    protocol: TCP
    targetPort: 9009
  selector:
    app: controller
    module: controller
    service: ale
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: controller
    module: dashboard
    service: ale
  name: ale-dashboard
  namespace: ale
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: controller
    module: dashboard
    service: ale
---
apiVersion: v1
kind: Service
metadata:
  name: ale-operator
  namespace: ale
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: controller
    module: operator
    service: ale
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
    module: mongodb
    service: ale
  name: mongo
  namespace: ale
spec:
  clusterIP: None
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: database
    module: mongodb
    service: ale
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agent
    module: agent
    service: ale
  name: ale-agent
  namespace: ale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
      module: agent
      service: ale
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: agent
        module: agent
        service: ale
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - system
            weight: 1
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: LOG_TIMESTAMPS
          value: "false"
        - name: LOG_LEVEL
          value: debug
        image: ghcr.io/ale-run/agent:dev
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 9800
        name: agent
        ports:
        - containerPort: 9800
        - containerPort: 9801
        readinessProbe:
          tcpSocket:
            port: 9800
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
        startupProbe:
          initialDelaySeconds: 5
          tcpSocket:
            port: 9800
      serviceAccountName: sa-agent
      terminationGracePeriodSeconds: 5
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: builder
    module: docker-daemon
    service: ale
  name: ale-build-daemon
  namespace: ale
spec:
  minReadySeconds: 10
  replicas: 1
  selector:
    matchLabels:
      app: builder
      module: docker-daemon
      service: ale
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: builder
        module: docker-daemon
        service: ale
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - system
            weight: 1
      containers:
      - env:
        - name: DOCKER_TLS_CERTDIR
          value: ""
        image: docker:20-dind
        name: docker-dind
        ports:
        - containerPort: 2376
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        securityContext:
          privileged: true
      serviceAccountName: sa-builder
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: controller
    module: controller
    service: ale
  name: ale-controller
  namespace: ale
spec:
  minReadySeconds: 10
  replicas: 1
  selector:
    matchLabels:
      app: controller
      module: controller
      service: ale
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: controller
        module: controller
        service: ale
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - system
            weight: 1
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: LOG_TIMESTAMPS
          value: "false"
        - name: LOG_LEVEL
          value: debug
        - name: DB_URL
          valueFrom:
            secretKeyRef:
              key: MONGODB_URL
              name: ale-secrets
        - name: DB_DATABASE
          valueFrom:
            secretKeyRef:
              key: MONGODB_DATABASE
              name: ale-secrets
        - name: AGENT_ENDPOINT
          value: https://agent.ale.svc:9801
        - name: AGENT_TOKEN
          valueFrom:
            secretKeyRef:
              key: AGENT_TOKEN
              name: ale-secrets
        image: ghcr.io/ale-run/server:dev
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "5"
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 9009
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 180
        name: server
        ports:
        - containerPort: 9009
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 9009
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 180
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 10m
            memory: 128Mi
      enableServiceLinks: false
      restartPolicy: Always
      serviceAccountName: sa-controller
      terminationGracePeriodSeconds: 20
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: controller
    module: dashboard
    service: ale
  name: ale-dashboard
  namespace: ale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
      module: dashboard
      service: ale
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: controller
        module: dashboard
        service: ale
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - system
            weight: 1
      containers:
      - image: ghcr.io/ale-run/dashboard:dev
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "5"
        livenessProbe:
          httpGet:
            path: /
            port: 80
        name: dashboard
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf
          readOnly: true
          subPath: nginx.conf
      enableServiceLinks: false
      restartPolicy: Always
      serviceAccountName: sa-controller
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: nginx.conf
            path: nginx.conf
          name: ale-dashboard-configmap
        name: nginx-conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: controller
    module: operator
    service: ale
  name: ale-operator
  namespace: ale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
      module: operator
      service: ale
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: controller
        module: operator
        service: ale
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - system
            weight: 1
      containers:
      - image: ghcr.io/ale-run/operator:dev
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "5"
        livenessProbe:
          httpGet:
            path: /
            port: 80
        name: operator
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf
          readOnly: true
          subPath: nginx.conf
      enableServiceLinks: true
      restartPolicy: Always
      serviceAccountName: sa-controller
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: nginx.conf
            path: nginx.conf
          name: ale-operator-configmap
        name: nginx-conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
    module: mongodb
    service: ale
  name: mongo
  namespace: ale
spec:
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: database
      module: mongodb
      service: ale
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
        module: mongodb
        service: ale
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: purpose
                operator: In
                values:
                - system
            weight: 1
      containers:
      - image: mongo:5.0
        imagePullPolicy: IfNotPresent
        name: mongo
        ports:
        - containerPort: 27017
          protocol: TCP
        resources:
          requests:
            cpu: 20m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        volumeMounts:
        - mountPath: /data/db
          name: mongo-volume
          subPath: data
      enableServiceLinks: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: pvc-mongo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ale-np-ingress
  namespace: ale
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ale-np-namespace
  namespace: ale
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
  podSelector: {}
  policyTypes:
  - Ingress
